--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.6.0",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.7",
     "daisyui": "^4.12.10",
